[gd_scene load_steps=10 format=2]

[ext_resource path="res://Weapon/M484BulletCollection1.png" type="Texture" id=1]
[ext_resource path="res://Weapon/Projectile.gd" type="Script" id=2]
[ext_resource path="res://Weapon/WeaponBaseClass.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/ProjectileHitbox.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.95141, 7.05182 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 from_color : hint_color;
uniform vec4 to_color : hint_color;

void fragment() {
    vec4 curr_color = texture(TEXTURE, UV);

    if (curr_color == from_color){
        COLOR = to_color;
    }else{
        COLOR = curr_color;
    }
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/from_color = Color( 0, 0, 0, 1 )
shader_param/to_color = Color( 0, 0, 0, 0 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.6906, 2.60372 )

[node name="Projectile" type="RigidBody2D"]
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 8
script = ExtResource( 5 )

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 173, 112, 11, 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="WeaponBaseClass" parent="." instance=ExtResource( 3 )]
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]

[editable path="HitBox"]
